--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,5 +1,6 @@
 ---
 import "@/styles/globals.css"
+import { Navbar } from "../components"
 const { title } = Astro.props;
 ---
 
@@ -12,6 +13,7 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
+		<Navbar client:load />
 		<slot />
 	</body>
 </html>
