--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -12,7 +12,7 @@ const { title } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body class="bg-black">
+	<body>
 		<Navbar client:load />
 		<slot />
 	</body>
