--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,12 @@
 ---
-import Mainlayout from '../layouts/MainLayout.astro';
+import Mainlayout from "../layouts/MainLayout.astro";
+import { Button } from "@/components/ui/button";
 ---
+
 <Mainlayout title="Home">
-  Home
+  <div>
+    <Button> <a href="/selfcheck1">Selfcheck 2.1.1</a> </Button>
+    <Button> <a href="/selfcheck1">Selfcheck 2.2.1</a> </Button>
+    <Button> <a href="/selfcheck1">Selfcheck 2.2.2</a> </Button>
+  </div>
 </Mainlayout>
