Fix anchor link click location

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,8 +5,8 @@ import { Button } from "@/components/ui/button";
 
 <Mainlayout title="Home">
   <div>
-    <Button> <a href="/selfcheck1">Selfcheck 2.1.1</a> </Button>
-    <Button> <a href="/selfcheck1">Selfcheck 2.2.1</a> </Button>
-    <Button> <a href="/selfcheck1">Selfcheck 2.2.2</a> </Button>
+    <a href="/selfcheck1"><Button> Selfcheck 2.1.1 </Button></a>
+    <Button> Selfcheck 2.2.1 </Button>
+    <a href="/selfcheck2-b"><Button> Selfcheck 2.2.2 </Button></a>
   </div>
 </Mainlayout>
