--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,14 @@
 ---
 import Mainlayout from "../layouts/MainLayout.astro";
 import { Button } from "@/components/ui/button";
+import { Sonner } from "@/components"
 ---
 
 <Mainlayout title="Home">
   <div>
     <a href="/selfcheck1"><Button> Selfcheck 2.1.1 </Button></a>
-    <Button> Selfcheck 2.2.1 </Button>
+    <Sonner client:load title="Self-Check 2.2.1" msg="Message Here" />
     <a href="/selfcheck2-b"><Button> Selfcheck 2.2.2 </Button></a>
   </div>
+  
 </Mainlayout>
