Rename self check

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,9 +6,9 @@ import { Sonner } from "@/components"
 
 <Mainlayout title="Home">
   <div>
-    <a href="/selfcheck1"><Button> Selfcheck 2.1.1 </Button></a>
+    <a href="/selfcheck1"><Button> Self-Check 2.1.1 </Button></a>
     <Sonner client:load title="Self-Check 2.2.1" msg="Message Here" />
-    <a href="/selfcheck2-b"><Button> Selfcheck 2.2.2 </Button></a>
+    <a href="/selfcheck2-b"><Button> Self-Check 2.2.2 </Button></a>
   </div>
   
 </Mainlayout>
