Add styles for positioning buttons

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import { Sonner } from "@/components"
 ---
 
 <Mainlayout title="Home">
-  <div>
+  <div class="flex flex-col gap-4 justify-center items-center mt-7 md:flex-row">
     <a href="/selfcheck1"><Button> Self-Check 2.1.1 </Button></a>
     <Sonner client:load title="Self-Check 2.2.1" msg="Message Here" />
     <a href="/selfcheck2-b"><Button> Self-Check 2.2.2 </Button></a>
