--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import { Sonner } from "@/components"
 <Mainlayout title="Home">
   <div class="flex flex-col gap-4 justify-center items-center mt-7 md:flex-row">
     <a href="/selfcheck1"><Button> Self-Check 2.1.1 </Button></a>
-    <Sonner client:load title="Self-Check 2.2.1" msg="Message Here" />
+    <Sonner client:load title="Self-Check 2.2.1" msg="Self-Check 2.2.1 not found in module" />
     <a href="/selfcheck2-b"><Button> Self-Check 2.2.2 </Button></a>
   </div>
   
