Render multiplechoices to selfcheck1 page

--- a/src/pages/selfcheck1.astro
+++ b/src/pages/selfcheck1.astro
@@ -1,7 +1,9 @@
 ---
 import MainLayout from "@/layouts/MainLayout.astro";
+import { MultipleChoices } from "@/components";
 ---
 
 <MainLayout>
     Activity1
+    <MultipleChoices client:visible/>
 </MainLayout>
