--- a/src/pages/selfcheck1.astro
+++ b/src/pages/selfcheck1.astro
@@ -4,6 +4,6 @@ import { MultipleChoices } from "@/components";
 ---
 
 <MainLayout>
-    Activity1
+    <span class="flex justify-center pt-4 text-xl font-bold">Self-Check 2.1.1</span>
     <MultipleChoices client:visible/>
 </MainLayout>
