Import to selfcheck2-b

--- a/src/pages/selfcheck2-b.astro
+++ b/src/pages/selfcheck2-b.astro
@@ -1,7 +1,9 @@
 ---
 import MainLayout from "@/layouts/MainLayout.astro";
+import { SelfCheck2B } from "@/components";
 ---
 
-<MainLayout>
-    Activity2
+<MainLayout> 
+    Activity2 
+    <SelfCheck2B />
 </MainLayout>
