--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -27,6 +27,11 @@ const { title } = Astro.props;
     });
   }
 </script>
+
+<script type="text/javascript" id="MathJax-script" async
+  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+</script>
+
 <html lang="en">
   <head>
     <meta charset="utf-8" />
