--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,6 +1,6 @@
 ---
 import "@/styles/globals.css";
-import { Navbar } from "../components";
+import { Navbar , Footer } from "../components";
 const { title } = Astro.props;
 ---
 
@@ -43,5 +43,6 @@ const { title } = Astro.props;
   <body>
     <Navbar client:load />
     <slot />
+    <Footer />
   </body>
 </html>
