--- a/src/pages/selfcheck2-b.astro
+++ b/src/pages/selfcheck2-b.astro
@@ -4,6 +4,6 @@ import { SelfCheck2B } from "@/components";
 ---
 
 <MainLayout> 
-    <span class="flex justify-center pt-4 text-xl font-bold">Self-Check 2.2.2</span>
+    <span class="flex justify-center pt-4 mb-4 text-xl font-bold">Self-Check 2.2.2</span>
     <SelfCheck2B />
 </MainLayout>
