--- a/src/pages/selfcheck2-a.astro
+++ b/src/pages/selfcheck2-a.astro
@@ -2,4 +2,8 @@
 import MainLayout from "@/layouts/MainLayout.astro";
 ---
 
-<MainLayout> Activity 2a </MainLayout>
+<MainLayout> 
+    <div class="text-center">
+        MODULE NOT FOUND
+    </div>    
+</MainLayout>
